deny-default.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: roboshop
spec:
  # denying all incoming requests including with in roboshop namespace
  podselector: {} # all pods in roboshop namespace
  policyTypes:
    - Ingress
